<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_match"
            android:title="@string/matchs"
            android:checked="true"
            android:icon="@drawable/ic_vs"/>

        <item
            android:id="@+id/nav_players"
            android:title="@string/players"
            android:icon="@drawable/ic_people"/>
        <item
            android:id="@+id/nav_sports"
            android:title="@string/sports"
            android:icon="@drawable/ic_ball"/>
    </group>

    <group android:id="@+id/sub_group">

        <item android:title="@string/social"
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_share"/>

        <item android:title="@string/log_out"
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_power_settings_new"/>
    </group>
</menu>