<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <pablogarcia.dotournament.customview.CircularImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_user"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/text_view_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextView"
                            android:hint="@string/name"
                            android:inputType="text"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edit_text_surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextView"
                            android:hint="@string/surname"
                            android:inputType="text"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edit_text_mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextView"
                            android:hint="@string/mail"
                            android:inputType="textEmailAddress"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_pass1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edit_text_pass1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextView"
                            android:hint="@string/password"
                            android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_pass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edit_text_pass2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextView"
                            android:hint="@string/repeat_password"
                            android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>

                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:padding="8dp">
                        <RadioButton android:id="@+id/radio_player"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user"
                            android:checked="true"/>
                        <RadioButton android:id="@+id/radio_admin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/admin"/>
                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="true"
                >
                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:onClick="onClickSubmit"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>