<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        style="@style/TextView"
                        android:hint="@string/date"
                        android:inputType="date"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_init_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edit_text_init_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            style="@style/TextView"
                            android:hint="@string/init_time"
                            android:inputType="time"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_end_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edit_text_end_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            style="@style/TextView"
                            android:hint="@string/end_time"
                            android:inputType="time"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_num_players"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edit_text_num_players"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextView"
                            android:hint="@string/num_players"
                            android:maxLength="3"
                            android:inputType="number"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <Spinner
                    android:id="@+id/spinner_sport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/place_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_place"
                    android:focusable="false"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="true">

            <Button
                android:id="@+id/button_add_tournament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:onClick="onClickSubmit"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
