<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_view_date_text"
                    android:text="@string/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:text="@string/default_date"
                    android:id="@+id/text_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_toEndOf="@id/text_view_date_text"
                    android:layout_toRightOf="@id/text_view_date_text"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:id="@+id/text_view_init_time_text"
                    android:text="@string/init_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_below="@+id/text_view_date_text"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:text="@string/default_time"
                    android:id="@+id/text_view_init_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_below="@+id/text_view_date_text"
                    android:layout_toEndOf="@id/text_view_init_time_text"
                    android:layout_toRightOf="@id/text_view_init_time_text"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:id="@+id/text_view_end_time_text"
                    android:text="@string/underscore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_below="@+id/text_view_date_text"
                    android:layout_toEndOf="@id/text_view_init_time"
                    android:layout_toRightOf="@id/text_view_init_time"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:text="@string/default_time"
                    android:id="@+id/text_view_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_below="@+id/text_view_date_text"
                    android:layout_toEndOf="@id/text_view_end_time_text"
                    android:layout_toRightOf="@id/text_view_end_time_text"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:id="@+id/text_view_available_sites_text"
                    android:text="@string/available_sites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_below="@+id/text_view_end_time_text"
                    android:textSize="@dimen/text_normal"/>

                <TextView
                    android:id="@+id/text_view_available_sites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_below="@+id/text_view_end_time_text"
                    android:layout_toEndOf="@id/text_view_available_sites_text"
                    android:layout_toRightOf="@id/text_view_available_sites_text"
                    android:textSize="@dimen/text_normal"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1.2">

                <TextView
                    android:id="@+id/text_view_sport"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="@dimen/image_view_small"
                    android:layout_height="@dimen/image_view_small"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"

                    />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="@dimen/text_normal"/>

            <TextView
                android:id="@+id/text_view_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="@dimen/text_small"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>